{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 9,
  "lineage": "03c3070f-bda9-3a00-7f80-3814e6b599e8",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/6d7a5a86-ad50-4e7d-bba3-d92c473c5ef0/resourceGroups/tf-demo-rg/providers/Microsoft.Network/routeTables/tf-demo-rt/routes/internet-route",
            "name": "internet-route",
            "next_hop_in_ip_address": "",
            "next_hop_type": "Internet",
            "resource_group_name": "tf-demo-rg",
            "route_table_name": "tf-demo-rt",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/6d7a5a86-ad50-4e7d-bba3-d92c473c5ef0/resourceGroups/tf-demo-rg/providers/Microsoft.Network/routeTables/tf-demo-rt",
            "location": "eastus",
            "name": "tf-demo-rt",
            "resource_group_name": "tf-demo-rg",
            "route": [],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6d7a5a86-ad50-4e7d-bba3-d92c473c5ef0/resourceGroups/tf-demo-rg/providers/Microsoft.Network/virtualNetworks/tf-demo-vnet/subnets/tf-demo-subnet",
            "name": "tf-demo-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tf-demo-rg",
            "virtual_network_name": "tf-demo-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6d7a5a86-ad50-4e7d-bba3-d92c473c5ef0/resourceGroups/tf-demo-rg/providers/Microsoft.Network/virtualNetworks/tf-demo-vnet/subnets/tf-demo-subnet",
            "route_table_id": "/subscriptions/6d7a5a86-ad50-4e7d-bba3-d92c473c5ef0/resourceGroups/tf-demo-rg/providers/Microsoft.Network/routeTables/tf-demo-rt",
            "subnet_id": "/subscriptions/6d7a5a86-ad50-4e7d-bba3-d92c473c5ef0/resourceGroups/tf-demo-rg/providers/Microsoft.Network/virtualNetworks/tf-demo-vnet/subnets/tf-demo-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.rt",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "173e07ed-ecba-4c61-8846-657c64fe5c6b",
            "id": "/subscriptions/6d7a5a86-ad50-4e7d-bba3-d92c473c5ef0/resourceGroups/tf-demo-rg/providers/Microsoft.Network/virtualNetworks/tf-demo-vnet",
            "location": "eastus",
            "name": "tf-demo-vnet",
            "resource_group_name": "tf-demo-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/6d7a5a86-ad50-4e7d-bba3-d92c473c5ef0/resourceGroups/tf-demo-rg/providers/Microsoft.Network/virtualNetworks/tf-demo-vnet/subnets/tf-demo-subnet",
                "name": "tf-demo-subnet"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}